dance autocomplete overlaps text box  https://github.com/dcmorse/contra/issues/89

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,3 +85,8 @@
 .contra-rotate-90 { 
   transform: rotate(90deg);
 }
+
+.angucomplete-dropdown { 
+  top: 32px;
+  left: 25%; /* 25% at time of writing this is because we're in the 3rd column of 12 */
+}
